fix(header): fix dropdown links visibility and hide only logo link on desktop

--- a/src/app/shared/components/header/header.scss
+++ b/src/app/shared/components/header/header.scss
@@ -25,9 +25,13 @@
   max-width: calc(1440px - 232px);
   padding: 16px 32px 16px 60px;
 
-  a {
+  > a:first-child {
     display: none;
   }
+}
+
+.project-management-tool {
+  margin-left: 40px;
 }
 
 .help-icon {
@@ -74,14 +78,14 @@
   right: 0;
   min-width: 170px;
   background-color: var(--color-medium-blue);
-  border-radius: 16px 0 16px 0;
-  overflow: hidden;
+  border-radius: 16px 0 16px 16px;
   z-index: 100;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   padding: 12px 16px;
   gap: 8px;
+
   &.bounce {
     animation: bounceLeft 0.2s ease-in-out;
   }
@@ -130,11 +134,15 @@
   }
   .header-container {
     padding: 16px 28px;
+    display: flex;
+    justify-content: space-between;
 
-    a {
-      display: initial;
+     > a:first-child {
+    display: flex;
     }
   }
+
+
   .header-logo {
     display: block;
     height: 40px;
@@ -150,5 +158,9 @@
 
   .dropdown__link--help {
     display: block;
+  }
+
+  .help-icon {
+    display: none;
   }
 }
